Fix Navbar z-index

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -12,7 +12,7 @@
   transition: transform .3s cubic-bezier(0.39, 0.575, 0.565, 1);
 
   background-color: var(--color-background);
-  z-index: 1;
+  z-index: 5;
 }
 
 .navLink {
